server/sonar-web/src/main/less/components/issues.less
@import (reference) "../variables";
@import (reference) "../mixins";
@import (reference) "../ui";
@import (reference) "../components/typography";

@leftPadding: 10px;
@rightPadding: 10px;
@topPadding: 8px;
@bottomPadding: 8px;


.issue-list {
  margin: 10px 0;
}

.issue {
  position: relative;
  padding-top: @topPadding;
  padding-bottom: @bottomPadding;
  border: 1px solid transparent;
  border-left-width: 3px;
  background-color: @issueBackgroundColor;
}

.issue-list,
.issue {
  max-width: 920px;
}

.issue.selected {
  border-color: @issueBorderColor !important;
}

.issue + .issue {
  margin-top: 5px;
}

.issue.selected + .issue {
  border-top-color: transparent;
}

.issue-inner {
  overflow-x: auto;
  overflow-y: hidden;
}

.issue-table {
  width: 100%;

  td {
    vertical-align: top;
  }
}

.issue-table + .issue-table {
  margin-top: 5px;
}

.issue-table-meta-cell {
  width: 1px;
  white-space: nowrap;
}

.issue-message {
  padding-left: @leftPadding;
  padding-right: @rightPadding;
  line-height: 1.5;
  font-size: @baseFontSize;
  font-weight: 500;
}

.issue-rule {
  font-size: 11px;
  font-weight: 400;
  .link-no-underline;
}

.issue-component {
  margin-top: 5px;
  padding-left: @leftPadding;
  padding-right: @rightPadding;
  line-height: 1.5;
  font-size: @smallFontSize;
}

.issue-age {
  position: relative;
  float: right;
  margin-top: -@baseFontSize * 1.5;
  padding-right: @rightPadding;
  line-height: 1.5;
  font-size: @smallFontSize;

  &:before {
    content: " ";
    position: absolute;
    top: 0; bottom: 0; right: 100%;
    width: 10px;
    background-image: linear-gradient(to right, fade(#fff, 0%), #fff 75%);
  }
}

.issue-meta-list {
  .clearfix;
  padding-left: @leftPadding;
  font-size: 0;
}

.issue-meta {
  display: inline-block;
  vertical-align: top;
  margin-right: 10px;
  line-height: 1.5;
  font-size: @smallFontSize;
}

.issue-meta-on-right {
  float: right;
  margin-right: 0;
}

.issue-meta-on-right + .issue-meta-on-right {
  margin-right: 10px;
}

.issue-meta-in-corner {
  position: absolute;
  top: @topPadding;
  right: @rightPadding;
  margin: 0 !important;
}

.issue-meta-label {
  display: inline-block;
  vertical-align: top;
  max-width: 110px;
  .text-ellipsis;
}

.issue-action {
  border-bottom: none;
}

.issue-action + .issue-action {
  margin-left: 4px;
}

.issue-changelog {
  max-width: 540px;
  max-height: 320px;
  overflow: auto;
}

.issue-comments {
  margin-top: 5px;
  padding-left: @leftPadding;
  padding-right: @rightPadding;
  font-size: @smallFontSize;
}

.issue-comment {
  display: table;
}

.issue-comment + .issue-comment {
  margin-top: 4px;
}

.issue-comment-author {
  display: table-cell;
  vertical-align: top;
  max-width: 130px;
  line-height: 18px;
  color: @secondFontColor;
  .text-ellipsis;
}

.issue-comment-age {
  display: table-cell;
  vertical-align: top;
  line-height: 18px;
  white-space: nowrap;
  color: @secondFontColor;
}

.issue-comment-text {
  display: table-cell;
  vertical-align: top;
  padding-left: 5px;
  padding-right: 5px;
  line-height: 18px;
  .formatted;
}

.issue-comment-actions {
  display: table-cell;
  vertical-align: top;
  padding-left: 5px;
  line-height: 18px;
  white-space: nowrap;
}

.issue-action-options {
  position: relative;
  min-width: 120px;
  margin: 0 -10px;
  font-size: @smallFontSize;
}

.issue-action-option {
  display: block;
  padding: 3px 10px;
}

a.issue-action-option {
  border-bottom: none;
  color: @baseFontColor;

  &.active {
    background-color: @barBackgroundColor;
    color: @baseFontColor;
  }
}

input.issue-action-options-search {
  padding: 0 10px 0 30px;
  border: none;
}

.issue-action-options-search-icon {
  position: absolute;
  top: 3px; left: 10px;
  color: @secondFontColor;

  &:before {
    font-size: @iconSmallFontSize;
  }
}

.issue-comment-bubble-popup {
  width: 440px;
  font-size: @smallFontSize;
}

.issue-comment-form-text {

}

.issue-comment-form-text textarea {
  width: 100%;
  max-width: 100%;
}

.issue-comment-form-footer {
  .clearfix;
  margin-top: 5px;
  line-height: 22px;
}

.issue-comment-form-actions {
  float: right;
}

.issue-comment-form-tips {
  float: left;
}

.issue-more-actions {
  line-height: 1.5;
  font-size: @smallFontSize;
}

.issue-navigate {
  display: none;
  position: absolute;
  width: 24px;
  top: 0;
  bottom: 0;
  border-bottom: none;

  .issue-navigate-to-left,
  .issue-navigate-to-right {
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -8px 0 0 -3px;

    &:before {
     font-size: 18px;
   }
  }

  &:hover {
    background-color: rgba(0, 0, 0, 0.05);
  }
}

.issue-navigate-right .issue-meta-in-corner {
  padding-right: 24px;
}

.issue-navigate-left {
  padding-left: 24px;

  .issue-navigate {
    display: block;
    left: 0;

    .issue-navigate-to-right {
      display: none;
    }
  }
}

.issue-navigate-right {
  padding-right: 24px;

  .issue-navigate {
    display: block;
    right: 0;

    .issue-navigate-to-left {
      display: none;
    }
  }
}

